# pwng-server

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: build  build_dependencies  run
src/: CMakeLists.txt  error_handler.hpp  math_types.hpp  message_handler.hpp  network_message.hpp  pwng_server.cpp  sim_timer.cpp  sim_timer.hpp  star_definitions.hpp  timer.hpp
src/components/: acceleration_component.hpp  body_component.hpp  name_component.hpp  position_component.hpp  radius_component.hpp  sim_components.hpp  subscription_components.hpp  velocity_component.hpp
src/managers/: galaxy_manager.cpp  galaxy_manager.hpp  json_manager.cpp  json_manager.hpp  network_manager.cpp  network_manager.hpp  network_message_broker.cpp  network_message_broker.hpp  simulation_manager.cpp  simulation_manager.hpp
src/systems/: gravity_system.hpp  integrator_system.hpp  name_system.hpp
